<resources>
    <string name="app_name">TaskMaster</string>
    <string name="tv_Title">TODO List</string>
    <string name="tv_Completed">Completed Todos</string>
    <string name="add_Item">Add</string>]
    <string name="backBtn">Back</string>
    <string name="addTask">Add New Task</string>
    <string name="EditTask">Update Task</string>
    <string name="multiLine_des">Description</string>
    <string name="title_des">Title</string>
    <string name="count">Total Todos: </string>
    <string name="msg">No Todos Added Yet</string>

</resources>