<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".UpdateTodoActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/editCardHeader"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/light_blue"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/transparent"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/EditTaskHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/EditTask"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/EditTodoCardView"
        android:layout_width="0dp"
        android:layout_height="352dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/light_blue"
        android:padding="10dp"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCardHeader"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/transparent"
        app:strokeWidth="1dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/background"
                android:hint="@string/title_des"
                android:textColor="@color/black"
                android:textColorHighlight="@color/background"
                android:textColorLink="@color/background" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="2"
                android:height="100dp"
                android:backgroundTint="@color/background"
                android:hint="@string/multiLine_des"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textColorHighlight="@color/background"
                android:textColorHint="@color/background"
                android:textColorLink="@color/background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:textAlignment="center">

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue"
                    android:elevation="8dp"
                    android:onClick="backToMainActivity"
                    android:text="@string/backBtn"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:icon="@drawable/back"
                    app:iconPadding="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/updateBtn"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue"
                    android:elevation="8dp"
                    android:text="@string/EditTask"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:icon="@drawable/edit"
                    app:iconPadding="0dp"
                    app:iconTintMode="src_atop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>